@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2023-10-05T16:12:03Z",
+  "timestamp" : "2023-10-06T08:12:15Z",
   "count_outdated" : 1017,
   "uniques_outdated" : 645,
-  "count" : 1053,
-  "uniques" : 668,
+  "count" : 1054,
+  "uniques" : 669,
   "clones" : [
     {
       "timestamp": "2023-09-22T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
+      "count_decinc": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -130,6 +130,15 @@
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2023-10-06T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
